--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.4",
     "@prisma/client": "^5.15.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "heroicons": "^2.1.4",
